Prevent exec name wrapping within box
Damn you Josh with your long name

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1106,6 +1106,7 @@ iframe {
     padding: 5px 0x;
     font-size: 1.4vw;
     color: black;
+    white-space: nowrap;
 }
 
 .exec-name>h6 {
